<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_rate"
        android:icon="@mipmap/pcliq_rate"
        android:title="@string/rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:icon="@mipmap/pcliq_share_nav"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_report"
        android:icon="@mipmap/pcliq_report"
        android:title="@string/report"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_details"
        android:icon="@mipmap/pcliq_share_nav"
        android:title="@string/details"
        app:showAsAction="never" />

</menu>
