<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_add_playlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#191e31">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:padding="10dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:fontFamily="@font/pcliq_leaguespartan_semibold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_message"
        android:padding="10dp"
        android:textSize="12sp"
        android:textColor="@color/whiteAA"
        android:fontFamily="@font/pcliq_leaguespartan_regular"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:startIconDrawable="@drawable/pcliq_ic_email"
        app:startIconTint="@color/white"
        android:background="@drawable/pcliq_bg_edittext"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white80"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:background="@null"
            android:fontFamily="@font/pcliq_leaguespartan_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgot_send"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/pcliq_bg_gradient_curve"
        app:backgroundTint="@null"
        android:fontFamily="@font/pcliq_leaguespartan_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til1" />


</androidx.constraintlayout.widget.ConstraintLayout>